// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`multiple-entries build should generate the expected files 1`] = `
Object {
  "3-60da20bea13fcdc7ba0e.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "details-d83abcb1de6f3808b142.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "details.css": "._91MnZhe{color:blue}
",
  "home-7a648b55c576266d9fd2.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "home.css": "._1QX0Hyt{color:red}
",
  "production/au/details/index.html": "
    <!DOCTYPE html>
    <html>
      <head>
        <meta charset=\\"UTF-8\\">
        <title>hello-world</title>
        <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
        <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"https:/www.seekcdn.com.au/someapp/details.css\\" />
      </head>
      <body>
        <div id=\\"app\\"><h1 class=\\"_91MnZhe\\" data-reactroot=\\"\\">Welcome to the Details page<!-- -->loading...</h1></div>
        <script type=\\"text/javascript\\" src=\\"https:/www.seekcdn.com.au/someapp/vendors~details~home-79579900adee9d76e780.js\\"></script>
<script type=\\"text/javascript\\" src=\\"https:/www.seekcdn.com.au/someapp/details-d83abcb1de6f3808b142.js\\"></script>
      </body>
    </html>
  ",
  "production/au/index.html": "
    <!DOCTYPE html>
    <html>
      <head>
        <meta charset=\\"UTF-8\\">
        <title>hello-world</title>
        <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
        <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"https:/www.seekcdn.com.au/someapp/home.css\\" />
      </head>
      <body>
        <div id=\\"app\\"><h1 class=\\"_1QX0Hyt\\" data-reactroot=\\"\\">Welcome to the Home page</h1></div>
        <script type=\\"text/javascript\\" src=\\"https:/www.seekcdn.com.au/someapp/vendors~details~home-79579900adee9d76e780.js\\"></script>
<script type=\\"text/javascript\\" src=\\"https:/www.seekcdn.com.au/someapp/home-7a648b55c576266d9fd2.js\\"></script>
      </body>
    </html>
  ",
  "vendors~details~home-79579900adee9d76e780.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`multiple-entries start should start a development server 1`] = `
"
    <!DOCTYPE html>
    <html>
      <head>
        <meta charset=\\"UTF-8\\">
        <title>hello-world</title>
        <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
        <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"home.css\\" />
      </head>
      <body>
        <div id=\\"app\\"><h1 class=\\"Home__root___1QX0Hyt\\" data-reactroot=\\"\\">Welcome to the Home page</h1></div>
        <script type=\\"text/javascript\\" src=\\"vendors~details~home-c7c9538d6c84bc005170.js\\"></script>
<script type=\\"text/javascript\\" src=\\"home-16dffdb65ac9d304d0d9.js\\"></script>
      </body>
    </html>
  "
`;
